--- a/index.html
+++ b/index.html
@@ -3,35 +3,73 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Miami Florida Plumbing - Trusted Plumbing Services in Miami</title>
+    <meta name="theme-color" content="#28A7F6" />
+
+    <title>Miami Florida Plumbing - Trusted Plumbing Services in Miami | 24/7 Emergency</title>
     <meta name="description" content="Professional plumbing services in Miami, FL. 25+ years experience. Expert pipe repair, drain cleaning, and emergency plumbing. Call (877) 145-9728 for fast, reliable service." />
+    <meta name="keywords" content="Miami plumbing, plumber Miami, emergency plumbing Miami, drain cleaning, pipe repair, water heater service, plumbing contractor Miami" />
     <meta name="author" content="Miami Florida Plumbing" />
+    <link rel="canonical" href="https://miamiplumbing.com" />
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700;800&family=Open+Sans:wght@400;500;600&display=swap" rel="stylesheet">
 
-    <meta property="og:title" content="Miami Florida Plumbing - Professional Plumbing Services" />
+    <meta property="og:title" content="Miami Florida Plumbing - Professional Plumbing Services | 24/7 Emergency" />
     <meta property="og:description" content="Trusted plumbing experts in Miami with 25+ years experience. Emergency repairs, drain cleaning, and professional pipe services." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:url" content="https://miamiplumbing.com" />
+    <meta property="og:image" content="https://slelguoygbfzlpylpxfs.supabase.co/storage/v1/object/public/document-uploads/hero-plumber-1760378321920.jpg" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta property="og:locale" content="en_US" />
+    <meta property="og:site_name" content="Miami Florida Plumbing" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:title" content="Miami Florida Plumbing - Professional Plumbing Services" />
+    <meta name="twitter:description" content="Trusted plumbing experts in Miami with 25+ years experience. Emergency repairs, drain cleaning, and professional pipe services." />
+    <meta name="twitter:image" content="https://slelguoygbfzlpylpxfs.supabase.co/storage/v1/object/public/document-uploads/hero-plumber-1760378321920.jpg" />
+
+    <meta name="geo.region" content="US-FL" />
+    <meta name="geo.placename" content="Miami" />
+    <meta name="geo.position" content="25.7617;-80.1918" />
+    <meta name="ICBM" content="25.7617, -80.1918" />
+
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "LocalBusiness",
+      "name": "Miami Florida Plumbing",
+      "description": "Professional plumbing services in Miami, FL with 25+ years experience",
+      "image": "https://slelguoygbfzlpylpxfs.supabase.co/storage/v1/object/public/document-uploads/hero-plumber-1760378321920.jpg",
+      "telephone": "+18771459728",
+      "email": "hello@miamiplumbing.com",
+      "address": {
+        "@type": "PostalAddress",
+        "addressLocality": "Miami",
+        "addressRegion": "FL",
+        "addressCountry": "US"
+      },
+      "geo": {
+        "@type": "GeoCoordinates",
+        "latitude": 25.7617,
+        "longitude": -80.1918
+      },
+      "url": "https://miamiplumbing.com",
+      "priceRange": "$$",
+      "openingHoursSpecification": {
+        "@type": "OpeningHoursSpecification",
+        "dayOfWeek": ["Monday", "Tuesday", "Wednesday", "Thursday", "Friday", "Saturday", "Sunday"],
+        "opens": "00:00",
+        "closes": "23:59"
+      },
+      "sameAs": []
+    }
+    </script>
   </head>
 
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
-    <script
-        src="https://slelguoygbfzlpylpxfs.supabase.co/storage/v1/object/public/scripts//route-messenger-vite.js"
-       data-target-origin="*"
-        data-message-type="ROUTE_CHANGE"
-        data-include-search-params="true"
-        data-only-in-iframe="true"
-        data-debug="true"
-        data-custom-data='{"appName": "YourApp", "version": "1.0.0", "greeting": "hi"}'
-        defer
-    ></script>
   </body>
 </html>
